name:              script
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable script
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base >= 4.8
                 , parsec >= 3.1
                 , http-server
                 , url
                 , HTTP
                 , MissingH
                 , mtl